fixing scrollbar issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,13 @@
 @tailwind utilities;
 
 /* Add Your Custom CSS Here */
+
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
